Remove the config compiler